--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -3,4 +3,4 @@ datamodel: datamodel.prisma
 # secret: ${env:PRISMA_ENDPOINT}
 hooks:
     post-deploy:
-        - graphql get schema -p prisma
+        - graphql get-schema -p prisma
