38/68 Catching up with my commits

--- a/sick-fits/backend/.env
+++ b/sick-fits/backend/.env
@@ -4,3 +4,7 @@ PRISMA_SECRET="4r3e5t"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=2525
+MAIL_USER="eca86481d7080f"
+MAIL_PASS="d28b48451f9682"
